--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus minima non quam dolor aliquid natus expedita quis necessitatibus libero! Asperiores consequuntur fugiat maxime tempora neque distinctio ex esse vero explicabo.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de Javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, iure, officia aspernatur illum illo in tempora magni corporis veniam cupiditate consectetur voluptates eveniet similique ipsa eligendi obcaecati, fuga laboriosam exercitationem?</p>
         </article>
     </main>
     
